# face-attendance-system

./: .gitignore
components/display_driver/: display_driver.c
components/fingerprint_driver/: fingerprint_driver.c
components/fingerprint_driver/include/: fingerprint_driver.h
components/keypad_driver/: CMakeLists.txt  keypad_driver.c
components/keypad_driver/include/: keypad_driver.h
components/mp3_driver/: mp3_driver.c
components/mp3_driver/include/: mp3_driver.h
components/network_manager/: network_manager.c
components/network_manager/include/: network_manager.h
components/system_tasks/: CMakeLists.txt  audio_task.c  fingerprint_task.c  keypad_task.c  network_task.c  time_sync_task.c  ui_task.c
components/system_tasks/include/: audio_task.h  fingerprint_task.h  keypad_task.h  network_task.h  time_sync_task.h  ui_task.h
components/time_manager/: time_manager.c
components/time_manager/include/: time_manager.h
main/: app_config.h  idf_component.yml  main.c  system_state.h
web_server/: add_sample_user.py  server.py
